--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/right_bar.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/right_bar.html
@@ -22,7 +22,7 @@
     <webshop:shopping-cart>
 		  <div class="order_status" >
 		    <div><shopping-cart:link><b><lift:loc>Shopping Cart</lift:loc> &gt;&gt;</b></shopping-cart:link></div>
-		    <div><shopping-cart:items><list:size/> </shopping-cart:items>&#160;<lift:loc>articles in shopping cart</lift:loc></div> 
+		    <div><shopping-cart:items><list:once><list:size/></list:once></shopping-cart:items>&#160;<lift:loc>articles in shopping cart</lift:loc></div> 
 		    <div><shopping-cart:clear><lift:loc>Clear shopping cart</lift:loc>&gt;&gt;</shopping-cart:clear></div>
 		  </div>
     </webshop:shopping-cart>
