git-svn-id: file:///var/svn/claro-catalog@206 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/left_bar.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/left_bar.html
@@ -1,4 +1,4 @@
-<div id="left-bar" class="page_menu">
+<div id="left_bar" class="page_menu">
   <div id="navigatie">
   <template:include template="group_menu"/>
 </div>
