--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/shopping_cart.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/shopping_cart.html
@@ -1,5 +1,5 @@
 <template:include template="page">
- <h2>Shopping Cart</h2>
+ <h1>Shopping Cart</h1>
   <webshop:shopping-cart phase="1" shopping_list_id="shopping_list">
     <div id="shopping_list">
       <shopping-cart:items>
@@ -7,9 +7,9 @@
           <thead>
             <th style="width:10%;text-align:center;">ArticleNumber</th>
             <th style="width:50%;text-align:center;">Product</th>
-            <th style="width:10%;text-align:center;">Price per item</th>
+            <th style="width:10%;text-align:center;">Price</th>
             <th style="width:10%;text-align:center;">Volume</th>
-            <th style="width:10%;text-align:center;">Total price</th>
+            <th style="width:10%;text-align:center;">Total</th>
             <th style="width:10%;text-align:center;">&#160;</th>
           </thead>
       <list:repeat>
