--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/promotion.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/promotion.html
@@ -1,25 +1,18 @@
-<div>
+<div class="promotion">
   <!-- img src="images/specialoffer.png" style="position:relative;top:0;right:0" /-->
   <promotion:product>
-    <div class="contentheading">Article Number: <product:value property="ArticleNumber"/></div>
-    <p><product:value property="Description"/></p>
-  </promotion:product> 
+    <p><product:value property="Description"/>
+    <br/><product:link>More info &gt;&gt;</product:link></p>
   <div>
-    <p><strike><promotion:product><product:value property="Price"/></promotion:product></strike><br/>
-    <span style="color:red"><promotion:price/></span></p>
-    <p>Price when order<br/> per <b><promotion:volume-discount/></b> articles</p>
-    <p style="font-size:10px;">Promotion ends: <promotion:end-date/></p>
-  </div>
-  <div>
-    <br/><br/>
-    <promotion:product>
     <webshop:shopping-cart>
     <shopping-cart:add>
       <span class="add_to_cart">Add to Cart</span>
     </shopping-cart:add>
     </webshop:shopping-cart>
-    <br/><br/>
-    </promotion:product>
-    <promotion:product><product:link>More info &gt;&gt;</product:link></promotion:product>
+    <p><strike><product:value property="Price"/></strike><br/>
+    <span style="color:red"><promotion:price/></span></p>
+    <p style="line-height:10pt">Price when ordered <br/>per <b><promotion:volume-discount/></b> articles</p>
+    <p style="font-size:10px;">Promotion ends: <promotion:end-date/></p>
   </div>
+   </promotion:product>
 </div>
