--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/promotions.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/promotions.html
@@ -1,5 +1,28 @@
+<head><script type="text/javascript"> 
+      $().ready(function() {
+        $('#coda-slider-1').codaSlider({
+        	autoSlide: true,
+        	autoSlideInterval: 4000,
+        	autoSlideStopWhenClicked: true,
+        	dynamicArrows: false,
+        	dynamicTabs: false
+        	});
+      });
+     </script> </head>
+
+<div class="coda-slider-wrapper"> 
+  <div class="coda-slider preload" id="coda-slider-1"> 
+		<webshop:promotions>
+	    <div class="panel"> 
+	      <div class="panel-wrapper"> 
+      <template:include template="promotion" />
+	      </div> 
+	    </div> 
+		</webshop:promotions>
+  </div><!-- .coda-slider --> 
+</div><!-- .coda-slider-wrapper --> 
+
 <table>
-<head><script src="/scripts/tablesorter2.js" type="text/javascript" /></head>
 <webshop:promotions group-size="2">
 <tr>
   <list:group>
