--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/search.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/search.html
@@ -1,23 +1,27 @@
 <template:include template="page">
 		  <head><title>Product Groups</title></head>
-		  <div class="contentheading">Search Results for '<webshop:current-search-string/>'</div>
+		  <h1>Search results for '<webshop:current-search-string/>'
+		  <webshop:current-product-group> in group '<group:name/>'</webshop:current-product-group>
+		  </h1>
 		  <webshop:current-search-products>
-		  <table>
-		    <thead>
-		      <th style="width:10%"><lift:loc>ArticleNumber</lift:loc></th>
-		      <th style="width:75%;text-align:center"><lift:loc>Description</lift:loc></th>
-		      <th style="width:15%"><lift:loc>Price</lift:loc></th>
-		    </thead>
-		  <list:repeat>
-		      <tr>
-            <td><product:link><product:value property="ArticleNumber" /></product:link></td>
-		        <td><product:value property="Description"/></td>
-		        <td><product:value property="Price" /></td>
-		      </tr>
-		  </list:repeat>
-		  </table>
-		  <list:none>
-  		  No search results found
-		  </list:none>
+      <list:none>
+        <p>No search results found</p>
+	      <webshop:current-product-group> <webshop:search-all class="link">search for '<webshop:current-search-string/>' in entire catalog</webshop:search-all></webshop:current-product-group>		  
+      </list:none>
+      <webshop:current-product-group> <webshop:search-all class="link">search for '<webshop:current-search-string/>' in entire catalog</webshop:search-all></webshop:current-product-group>		  
+      <table class="product_table">
+        <thead>
+          <th class="id_col"><lift:loc>Product</lift:loc></th>
+          <th class="desc_col"><lift:loc></lift:loc></th>
+          <th class="price_col"><lift:loc>Price</lift:loc></th>
+        </thead>
+        <list:repeat>
+          <tr>
+            <td class="id_col"><product:link><product:value property="ArticleNumber" /></product:link></td>
+            <td class="desc_col"><product:value property="Description"/></td>
+            <td class="price_col"><product:value property="Price" /></td>
+          </tr>
+        </list:repeat>
+      </table>
 		  </webshop:current-search-products>
 </template:include>
