--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/group_menu.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/group_menu.html
@@ -1,6 +1,6 @@
 <webshop:top-level-groups>
-  <div class="page_menu_artgrp">
-    <div class="description"><group:group-value property="Name"/></div>
+  <div class="side_bar_panel">
+    <h1><group:group-value property="Name"/></h1>
 		<table class="ThemePanelMenu" cellspacing="0">
 		  <tbody>
     		<group:sub-groups prefix="sub">
