--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/promotion.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/promotion.html
@@ -5,9 +5,9 @@
     <br/><product:link>More info &gt;&gt;</product:link></p>
   <div>
     <webshop:shopping-cart>
-    <shopping-cart:add>
+    <shopping-cart:add-promotion>
       <span class="add_to_cart">Add to Cart</span>
-    </shopping-cart:add>
+    </shopping-cart:add-promotion>
     </webshop:shopping-cart>
     <p><strike><product:value property="Price"/></strike><br/>
     <span style="color:red"><promotion:price/></span></p>
