--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/left_bar.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/left_bar.html
@@ -1,4 +1,4 @@
-<div id="left_bar" class="page_menu">
+<div id="left_bar" class="side_bar">
   <div id="navigatie">
   <template:include template="group_menu"/>
 </div>
