--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/shopping_cart.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/shopping_cart.html
@@ -24,11 +24,13 @@
             <td style="text-align:center;"><item:remove><img src="/images/bin_closed.png" /></item:remove></td>
           </tr>
       </list:repeat>
+       <shopping-cart:total-prices>
           <tr>
-            <td colspan="4"><b>Total price (excl. shipping costs):</b></td>
-            <td style="text-align:right;"><b><shopping-cart:totalPrice/></b></td>
+            <td colspan="4"><list:first><b>Total price (excl. shipping costs):</b></list:first></td>
+            <td style="text-align:right;"><b><total-price:format/></b></td>
             <td>&#160;</td>
           </tr>
+       </shopping-cart:total-prices>
         </table>
         <list:none>There are no items in the shopping cart</list:none>
       </shopping-cart:items>
