git-svn-id: file:///var/svn/claro-catalog@216 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/documentation/sub/templates.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/documentation/sub/templates.html
@@ -1,4 +1,4 @@
-<template:include template="page">
+<template:include template="templates/page">
 <h1>SUBTemplates</h1>
 A site consists of top-level templates and templates that are included from other templates. 
 There are three commands that deal with template inclusion:
