--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/group.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/group.html
@@ -1,4 +1,4 @@
-<template:include template="page">
+<template:include template="templates/page">
   <webshop:current-product-group>
 		  <head><title>Group <group:group-value property="Name"/></title></head>
 		  <h1><group:group-value property="Name"/></h1>
