--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/product.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/product.html
@@ -1,4 +1,4 @@
-<template:include template="page">
+<template:include template="templates/page">
   <webshop:current-product>
      <head><title>Product Info</title></head>
      <div class="contentheading">Article Number: <product:value property="ArticleNumber"/></div>
