--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/search.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/search.html
@@ -1,4 +1,4 @@
-<template:include template="page">
+<template:include template="templates/page">
 		  <head><title>Product Groups</title></head>
 		  <h1>Search results for '<webshop:current-search-string/>'
 		  <webshop:current-product-group> in group '<group:name/>'</webshop:current-product-group>
