--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/index.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/index.html
@@ -1,3 +1,3 @@
-<template:include template="page">
+<template:include template="templates/page">
 	<template:include template="promotions"/>
 </template:include>
