--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/login.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/login.html
@@ -1,30 +1,17 @@
-<template:include template="page">
-  <h1>Login</h1>
-  <webshop:current-user>
-  <p>Welcome, <user:name/></p>
-  <p>You are currently logged in</p>
-  <login:logout/>
-  </webshop:current-user>
-  <webshop:current-user exists="false">
-  </webshop:current-user>
+<template:include template="templates/page">
+    <h1>Login</h1>
+    <webshop:login-form>
+      <table> 
+        <tr><td><login:email-field class="formfield emailfield"/></td></tr>
+        <tr><td><login:password-field class="formfield passwordfield"/>
+        <login:login-button class="formbutton"/></td>
+        </tr>
+        <login:failure> 
+        <tr><td><span class="error">Invalid user name or password</span></td></tr>
+        <tr><td><a href="/register">Forgot password? &gt;&gt;</a></td></tr>
+        </login:failure>
+      </table> 
+    </webshop:login-form>
+     <a href="/register">Register as new customer &gt;&gt;</a>
   
-  <table>
-  <tr class="heading" colspan="2"><td>Login data</td></tr>
-  <tr><td>Email address</td><td><register:email/></td></tr>
-  <tr><td>Password</td><td><register:password/></td></tr>
-  <tr><td>Repeat password</td><td><register:repeat-password/></td></tr>
-
-  <tr class="heading" colspan="2"><td>Account data</td></tr>
-  <register:address>
-  <tr><td>Name</td><td><register:name /></td></tr>
-  <tr><td>Address</td><td><address:address1 /></td></tr>
-  <tr><td></td><td><address:address2 /></td></tr>
-  <tr><td>Postal code</td><td><address:postalCode /></td></tr>
-  <tr><td>Town</td><td><address:town /></td></tr>
-  <tr><td>Country</td><td><address:country /></td></tr>
-  <tr><td>Telephone</td><td><register:phone/></td></tr>
-  </register:address>
-  </table>
-  <register:register/>
-  </webshop:register-form>
 </template:include>
