--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/registered.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/registered.html
@@ -1,4 +1,4 @@
-<template:include template="page">
+<template:include template="templates/page">
   <h1>Thank you for registering</h1>
   <a href="/">continue...</a>
 </template:include>
