git-svn-id: file:///var/svn/claro-catalog@218 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/shopping_cart.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/shopping_cart.html
@@ -39,7 +39,7 @@
     <list:last>
     <div class="button-bar">
     <webshop:current-user>
-    <a class="form-button" href="/checkout">checkout</a>
+    <shopping-cart:place-order-link>Place Order</shopping-cart:place-order-link>
     <object:none>
     <a class="disabled form-button" href="/checkout">checkout</a>
     <br/>Please, login to proceed checkout</object:none>
