git-svn-id: file:///var/svn/claro-catalog@227 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/group.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/group.html
@@ -19,7 +19,7 @@
       </group:promotions>
        <div style="clear:both" />
       
-	    <group:products include_sub-groups="yes">
+	    <group:products include-sub-groups="true">
 		  <table class="product_table">
  		    <thead>
 		      <th class="id_col"><lift:loc>Product</lift:loc></th>
