git-svn-id: file:///var/svn/claro-catalog@228 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/agilexs/cms/shop/tetterode/website/page_footer.html
+++ b/CatalogXS/trunk/CatalogXS/source/agilexs/cms/shop/tetterode/website/page_footer.html
@@ -1,5 +1,5 @@
-<div>
-  <table> 
+<div class="page_footer">
+  <table > 
     <tr> 
       <td>Tetterode</td> 
       <td>Willem de Zwijgerlaan 334</td> 
