--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/group.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/group.html
@@ -8,7 +8,7 @@
 		  <group:sub-groups prefix="sub" group-size="1">
 		  <table class="sub_item">
 		  <tr>
-        <td class="left"><sub:link class="subgroup"><sub:name/></sub:link></td>
+        <td class="left"><sub:link class="subgroup"><sub:group-value property="Name"/></sub:link></td>
         <td class="right"><util:break size="80"><sub:group-value property="Description"/><break:more>...</break:more></util:break></td>
 		  </tr>
 		  </table>
