git-svn-id: file:///var/svn/claro-catalog@253 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/group_menu.html
+++ b/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/group_menu.html
@@ -6,7 +6,7 @@
     		<group:sub-groups prefix="sub">
 		      <tr class="ThemePanelMainItem">
 		        <td class="ThemePanelMainItemLeft" />
-		        <td class="ThemePanelMainItemText"><sub:link class="ThemePanelMainItemText"><sub:name/></sub:link></td>
+		        <td class="ThemePanelMainItemText"><sub:link class="ThemePanelMainItemText"><sub:group-value property="Name"/></sub:link></td>
 		        <td class="ThemePanelMainItemRight" />
 		      </tr>
 	    	</group:sub-groups>
