--- a/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/product.html
+++ b/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/product.html
@@ -16,7 +16,7 @@
 		</table>
 
       <webshop:shopping-cart>
-        <shopping-cart:add product="product" style="float:right;padding: 8px 12px;font-size: 12px;text-decoration: none;white-space:nowrap;line-height:20px;border: 1px solid #999;color: #4D4D4D;background: #FC0 url(../images/bg_d01.gif) repeat-x 0px 50%;">Add to Cart</shopping-cart:add>
+        <shopping-cart:add product="product" style="float:right;padding: 8px 12px;font-size: 12px;text-decoration: none;white-space:nowrap;line-height:20px;border: 1px solid #999;color: #4D4D4D;background: #FC0 url(images/bg_d01.gif) repeat-x 0px 50%;">Add to Cart</shopping-cart:add>
       </webshop:shopping-cart>
    </webshop:current-product>
    <webshop:current-product when-exists="false">
