git-svn-id: file:///var/svn/claro-catalog@258 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/group.html
+++ b/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/group.html
@@ -3,6 +3,8 @@
 		  <head><title>Group <group:group-value property="Name"/></title></head>
 		  <h1><group:group-value property="Name"/></h1>
 		  <div class="page_image"><group:group-value property="Image"/></div>
+		  <br/>
+		  <group:group-property name="factsheet"><b>Fact Sheet</b>: <property:value/></group:group-property>
 		  <p><group:group-value property="Description"/></p>
 
 		  <group:sub-groups prefix="sub" group-size="1">
