--- a/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/promotion.html
+++ b/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/promotion.html
@@ -1,6 +1,7 @@
 <div class="promotion">
   <!-- img src="images/specialoffer.png" style="position:relative;top:0;right:0" /-->
   <promotion:product>
+     <div style="float:right"><product:value property="Image" height="60px"/></div>
     <p><product:value property="Description"/>
     <br/><product:link>More info &gt;&gt;</product:link></p>
   <div>
