--- a/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/promotions.html
+++ b/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/promotions.html
@@ -12,13 +12,26 @@
 
 <div class="coda-slider-wrapper"> 
   <div class="coda-slider preload" id="coda-slider-1"> 
-		<webshop:promotions>
 	    <div class="panel"> 
-	      <div class="panel-wrapper"> 
-      <template:include template="promotion" />
+	      <div class="panel-wrapper">
+	        <img src="images/home1.jpg"/> 
+	      </div> 
+      </div> 
+	    <div class="panel"> 
+	      <div class="panel-wrapper">
+	        <img src="images/home2.jpg"/> 
 	      </div> 
 	    </div> 
-		</webshop:promotions>
+	    <div class="panel"> 
+	      <div class="panel-wrapper">
+	        <img src="images/home3.jpg"/> 
+	      </div> 
+	    </div> 
+	    <div class="panel"> 
+	      <div class="panel-wrapper">
+	        <img src="images/home4.jpg"/> 
+	      </div> 
+	    </div> 
   </div><!-- .coda-slider --> 
 </div><!-- .coda-slider-wrapper --> 
 
