git-svn-id: file:///var/svn/claro-catalog@284 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/subpage1.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/subpage1.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -6,6 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="default.css" rel="stylesheet" type="text/css" />
+<link href="layout.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
 <!--
  @import url("layout.css");
@@ -143,11 +143,11 @@
 		<!-- end #box3.boxA -->
 	</div>
 	<!-- end #sidebar -->
-	<div style="clear: both;">&nbsp;</div>
+	<div style="clear: both;">&#160;</div>
 </div>
 <!-- end #page -->
 <div id="footer">
-	<p class="links"><a href="#">Privacy Policy</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="#">Legal Information</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="#">Terms of Use</a></p>
+	<p class="links"><a href="#">Privacy Policy</a> &#160;&#160;&#160;|&#160;&#160;&#160; <a href="#">Legal Information</a> &#160;&#160;&#160;|&#160;&#160;&#160; <a href="#">Terms of Use</a></p>
 	<p class="legal">Copyright (c) 2008 Websitename.com. All rights reserved.</p>
 </div>
 <!-- end #footer -->
