--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/subpage4.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/subpage4.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -96,7 +95,7 @@
 </div>
 <!-- end #page -->
 <div id="footer">
-	<p class="links"><a href="#">Privacy Policy</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="#">Legal Information</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="#">Terms of Use</a></p>
+	<p class="links"><a href="#">Privacy Policy</a> &#160;&#160;&#160;|&#160;&#160;&#160; <a href="#">Legal Information</a> &#160;&#160;&#160;|&#160;&#160;&#160; <a href="#">Terms of Use</a></p>
 	<p class="legal">Copyright (c) 2008 Websitename.com. All rights reserved.</p>
 </div>
 <!-- end #footer -->
