git-svn-id: file:///var/svn/claro-catalog@293 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/category.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/category.html
@@ -5,18 +5,18 @@
 		<cms:paging>
 		<div id="box1" class="boxA">
 		<div class="title">
-		<h1><category:category-value property="Name" />
-		<span class="paging" style="float:right">
+		<h1><category:category-value property="Name"/> ('ink' search result)
+		  <span class="paging" style="float:right">
 			<paging:previous>&#171;</paging:previous>
 			<paging:page/>
-			<paging:next>&#062;&#062;&#10144;</paging:next>
-			</span>
+			<paging:next>&#187;</paging:next>
+		  </span>
 		</h1>
 			
 		</div>
 		<div class="content">
 		<ul class="list2">
-			<category:products include-sub-groups="true" page-size="4">
+			<category:products include-sub-groups="true" page-size="8">
 				<li list:even="class=alt">
 				<p class="image"><a href="#"><product:value property="Image"
 					height="84px" class="border" /></a></p>
