git-svn-id: file:///var/svn/claro-catalog@294 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/category.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/category.html
@@ -6,7 +6,7 @@
 		<div id="box1" class="boxA">
 		<div class="title">
 		<h1><category:category-value property="Name"/> ('ink' search result)
-		  <span class="paging" style="float:right">
+		  <span class="paging">
 			<paging:previous>&#171;</paging:previous>
 			<paging:page/>
 			<paging:next>&#187;</paging:next>
