--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/category.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/category.html
@@ -6,7 +6,9 @@
 		<div id="box1" class="boxA">
 		<div class="title">
 		<h1><category:category-value property="Name"/> ('ink' search result)
-		  <span class="paging">
+			<a href="#"><img style="position:relative; top:1px; padding-left: 4px;" src="/images/filter.gif"/></a>
+		  <paging:single-page/>
+		  <span paging:single-page="style=display:none" class="paging">
 			<paging:previous>&#171;</paging:previous>
 			<paging:page/>
 			<paging:next>&#187;</paging:next>
@@ -21,6 +23,7 @@
 				<p class="image"><a href="#"><product:value property="Image"
 					height="84px" class="border" /></a></p>
 				<h3><a href="#"><product:value property="Name" /></a></h3>
+				<product:value property="Variant" />
 				<p><a href="#" class="add">Add to Cart</a> <b><product:value
 					property="Price" /></b></p>
 				</li>
