git-svn-id: file:///var/svn/claro-catalog@297 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/shopping_cart.html
+++ b/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/shopping_cart.html
@@ -1,4 +1,4 @@
-<template:include template="templates/page">
+<template:include template="templates/pageframe">
  <h1>Shopping Cart</h1>
   <webshop:shopping-cart phase="1" shopping_list_id="shopping_list">
     <div id="shopping_list">
