--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/category.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/category.html
@@ -24,7 +24,7 @@
 					height="84px" class="border" /></a></p>
 				<h3><a href="#"><product:value property="Name" /></a></h3>
 				<product:value property="Variant" />
-				<p><a href="#" class="add">Add to Cart</a> <b><product:value
+				<p><product:add-to-cart class="add">Add to Cart</product:add-to-cart> <b><product:value
 					property="Price" /></b></p>
 				</li>
 			</category:products>
