--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/category.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/category.html
@@ -8,7 +8,8 @@
 		<h1><category:category-value property="Name"/> ('ink' search result)
 			<a href="#"><img style="position:relative; top:1px; padding-left: 4px;" src="/images/filter.gif"/></a>
 		  <paging:single-page/>
-		  <span paging:single-page="style=display:none" class="paging">
+		  <span class="paging">
+            <paging:single-page><attr:set name="style" value="display:none"/></paging:single-page>
 			<paging:previous>&#171;</paging:previous>
 			<paging:page/>
 			<paging:next>&#187;</paging:next>
