git-svn-id: file:///var/svn/claro-catalog@306 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/group.html
+++ b/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/group.html
@@ -21,7 +21,7 @@
       </group:promotions>
        <div style="clear:both" />
       
-	    <group:products include-sub-groups="true">
+	    <group:products include-sub-categories="true">
 	    <template:include template="templates/product"></template:include>
 	    </group:products>
   </webshop:current-product-group>
