--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/shoppingcart.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/shoppingcart.html
@@ -65,7 +65,7 @@
       <ul class="list1">
         <list:repeat>
           <li list:first="class=first"><category:link>
-            <category:category-value property="Name" />
+            <category:value property="Name" />
           </category:link></li>
         </list:repeat>
       </ul>
